--- a/JSalura01/cap4/introducao-javascript/css/index.css
+++ b/JSalura01/cap4/introducao-javascript/css/index.css
@@ -33,7 +33,7 @@ header .container:before{
 }
 
 .container{
-	width: 60%;
+	width: 90%;
 	height: 100%;
 	margin: 0 auto;
 }
@@ -131,4 +131,7 @@ button[disabled=disabled], button:disabled {
 
 .campo-invalido{
 	border: 1px solid red;
+}
+.paciente-invalido{
+    background-color: lightcoral;
 }
