--- a/JSalura01/cap4/introducao-javascript/css/index.css
+++ b/JSalura01/cap4/introducao-javascript/css/index.css
@@ -55,7 +55,7 @@ table{
 	width: 100%;
 	margin-bottom : .5em;
     table-layout: fixed;
-
+	cursor: pointer;
 }
 
 td, th {
@@ -138,4 +138,17 @@ button[disabled=disabled], button:disabled {
 #erro {
 	color: red;
 	font-weight: bold;
+}
+#remoçao {
+	margin: 20px;
+}
+#botaoremove {
+	background-color: #0c8cd3;
+	padding: 7px;
+	border: none;
+	color: white;
+	box-shadow: 0px 3px 0px rgba(0, 0, 0, 0.808);
+	margin-bottom: 10px;
+	margin-top: 10px;
+	cursor: pointer;
 }
