--- a/JSalura01/cap4/introducao-javascript/css/index.css
+++ b/JSalura01/cap4/introducao-javascript/css/index.css
@@ -152,3 +152,7 @@ button[disabled=disabled], button:disabled {
 	margin-top: 10px;
 	cursor: pointer;
 }
+.fadeOut {
+	opacity: 0;
+	transition: 0.5s;
+}
