--- a/JSalura01/cap4/introducao-javascript/css/index.css
+++ b/JSalura01/cap4/introducao-javascript/css/index.css
@@ -50,6 +50,11 @@ section h2{
 	border-bottom: 1px solid #ccc;
 	margin-bottom: .5em;
 }
+#ifiltro {
+	width: 200px;
+	height: 30px;
+	margin-bottom: 10px;
+}
 
 table{
 	width: 100%;
