--- a/JSalura01/cap4/introducao-javascript/css/index.css
+++ b/JSalura01/cap4/introducao-javascript/css/index.css
@@ -140,7 +140,7 @@ button[disabled=disabled], button:disabled {
 .paciente-invalido{
     background-color: lightcoral;
 }
-#erro {
+.erro {
 	color: red;
 	font-weight: bold;
 }
