--- a/flexbox/css/flexbox.css
+++ b/flexbox/css/flexbox.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+/* Cabeçalho */
+
 header > .container {
     display: flex;
     align-items: center;
@@ -8,4 +10,41 @@ header > .container {
 
 .cabecalhoPrincipal-nav {
     display: flex;
+}
+
+/* Corpo */
+.conteudoPrincipal-cursos {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 500px;
+}
+.rodapePrincipal-navMap-list {
+    display: flex;
+    flex-direction: column;
+    height: 260px;
+    flex-wrap: wrap;
+}
+
+/* Footer */
+
+.rodapePrincipal-patrocinadores > .container {
+    display: flex;
+    justify-content: space-between;
+}
+.rodapePrincipal-patrocinadores > .container > ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 70%;
+    margin-right: 10%;
+}
+
+.rodapePrincipal-patrocinadores > .container > form {
+    width: 20%;
+}    
+
+.rodapePrincipal-contatoForm-fieldset {
+    display: flex;
+    justify-content: space-between;
 }
