--- a/flexbox/css/flexbox.css
+++ b/flexbox/css/flexbox.css
@@ -17,6 +17,7 @@ header > .container {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    justify-content: space-between;
     height: 500px;
 }
 .rodapePrincipal-navMap-list {
