--- a/flexbox/css/style.css
+++ b/flexbox/css/style.css
@@ -2,7 +2,10 @@ body {
 	background-color: #F2F5F7;
 	font-family: 'Open Sans',Arial,sans-serif;
 }
-
+#menuHamburguer {
+	display: none;
+	cursor: pointer;
+}
 .container {
 	width: 94%;
 	margin: 0 auto;
